# energy_project_group4

./: README.md  pyproject.toml
energy_project/src/: cli.py  data_ingestion.py  feature_engineering.py  forecasting.py  stream_app.py
