[tool.poetry]
name = "energy-project"
version = "0.1.0"
description = ""
authors = ["lohemilio <em97lohe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
sqlalchemy = "^2.0.28"
typer = "^0.9.0"
streamlit = "^1.0.0"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
joblib = "^1.3.1"
matplotlib = "^3.7.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
